plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'io.github.kyukyunyorituryo.aozoraepub3'
    compileSdk 35

    defaultConfig {
        applicationId "io.github.kyukyunyorituryo.aozoraepub3"
        minSdk 31
        targetSdk 35
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    // https://mvnrepository.com/artifact/org.apache.velocity/velocity-engine-core
    implementation group: 'org.apache.velocity', name: 'velocity-engine-core', version: '2.4'
    // https://mvnrepository.com/artifact/com.github.albfernandez/juniversalchardet
    implementation group: 'com.github.albfernandez', name: 'juniversalchardet', version: '2.5.0'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-compress
    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.27.1'
    // https://mvnrepository.com/artifact/com.github.junrar/junrar
    implementation group: 'com.github.junrar', name: 'junrar', version: '7.5.5'
// https://mvnrepository.com/artifact/commons-cli/commons-cli
    implementation group: 'commons-cli', name: 'commons-cli', version: '1.9.0'
// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
// https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.16'
// https://mvnrepository.com/artifact/org.jsoup/jsoup
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.18.1'
// https://mvnrepository.com/artifact/org.json/json
    implementation group: 'org.json', name: 'json', version: '20240303'

    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}